[Metricbeat] Fix tags_filter for cloudwatch metricset in aws module (#18524)
* Fix tags_filter for cloudwatch metricset
* if tags_filter is given, overwrite tags in cloudwatch specific config

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -198,6 +198,7 @@ field. You can revert this change by configuring tags for the module and omittin
 - Fix overflow on Prometheus rates when new buckets are added on the go. {pull}17753[17753]
 - Remove specific win32 api errors from events in perfmon. {issue}18292[18292] {pull}18361[18361]
 - Fix application_pool metricset after pdh changes. {pull}18477[18477]
+- Fix tags_filter for cloudwatch metricset in aws. {pull}18524[18524]
 
 *Packetbeat*
 
