[Metricbeat] Rename tags to tags_filter for cloudwatch metricset (#16733)
* Deprecate tags config parameter to use tags_filter instead for cloudwatch metricset

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -457,7 +457,7 @@ field. You can revert this change by configuring tags for the module and omittin
 *Journalbeat*
 
 *Metricbeat*
-
+- Deprecate tags config parameter in cloudwatch metricset. {pull}16733[16733]
 
 *Packetbeat*
 
