[docs] Fix broken doc structure (#18677)

--- a/libbeat/docs/shared-kerberos-config.asciidoc
+++ b/libbeat/docs/shared-kerberos-config.asciidoc
@@ -1,7 +1,11 @@
 [[configuration-kerberos]]
 == Configure Kerberos
 
-You can specify Kerberos options with any output or input that supports Kerberos, like {es} and Kafka.
+++++
+<titleabbrev>Kerberos</titleabbrev>
+++++
+
+You can specify Kerberos options with any output or input that supports Kerberos, like {es}.
 
 The following encryption types are supported:
 
@@ -82,4 +86,3 @@ This option can only be configured for Kafka. It is the name of the Kafka servic
 ==== `realm`
 
 Name of the realm where the output resides.
-
