--- a/libbeat/processors/add_kubernetes_metadata/docs/add_kubernetes_metadata.asciidoc
+++ b/libbeat/processors/add_kubernetes_metadata/docs/add_kubernetes_metadata.asciidoc
@@ -53,16 +53,24 @@ examples in <<kubernetes-indexers-and-matchers>>.
 The configuration below enables the processor when {beatname_lc} is run as a pod in
 Kubernetes.
 
-[source,yaml]
+[source,yaml,subs="attributes+"]
 -------------------------------------------------------------------------------
 processors:
   - add_kubernetes_metadata:
+ifndef::kubernetes_default_indexers[]
+      # Defining indexers and matchers manually is required for {beatname_lc}, for instance:
+      #indexers:
+      #  - ip_port:
+      #matchers:
+      #  - fields:
+      #      lookup_fields: ["metricset.host"]
+endif::kubernetes_default_indexers[]
 -------------------------------------------------------------------------------
 
 The configuration below enables the processor on a Beat running as a process on
 the Kubernetes node.
 
-[source,yaml]
+[source,yaml,subs="attributes+"]
 -------------------------------------------------------------------------------
 processors:
   - add_kubernetes_metadata:
@@ -70,6 +78,14 @@ processors:
       # If kube_config is not set, KUBECONFIG environment variable will be checked
       # and if not present it will fall back to InCluster
       kube_config: ${HOME}/.kube/config
+ifndef::kubernetes_default_indexers[]
+      # Defining indexers and matchers manually is required for {beatname_lc}, for instance:
+      #indexers:
+      #  - ip_port:
+      #matchers:
+      #  - fields:
+      #      lookup_fields: ["metricset.host"]
+endif::kubernetes_default_indexers[]
 -------------------------------------------------------------------------------
 
 The configuration below has the default indexers and matchers disabled and
