Add k8s keystore backend (#18096)

--- a/metricbeat/docs/autodiscover-hints.asciidoc
+++ b/metricbeat/docs/autodiscover-hints.asciidoc
@@ -45,7 +45,8 @@ The username to use for authentication
 
 The password to use for authentication. It is recommended to retrieve this sensitive information from an ENV variable
 and avoid placing passwords in plain text. Unlike static autodiscover configuration, hints based autodiscover has
-no access to the keystore of Metricbeat since it could be a potential security issue.
+no access to the keystore of Metricbeat since it could be a potential security issue. However hints based autodiscover
+can make use of Kuberentes Secrets as described in <<kubernetes-secrets>>.
 
 [float]
 ===== `co.elastic.metrics/ssl.*`
