[Ingest Manager] Fix install service script for windows (#18814)
[Ingest Manager] Fix install service script for windows (#18814)

--- a/x-pack/elastic-agent/CHANGELOG.asciidoc
+++ b/x-pack/elastic-agent/CHANGELOG.asciidoc
@@ -41,6 +41,7 @@
 - Clean action store after enrolling to new configuration {pull}18656[18656]
 - Avoid watching monitor logs {pull}18723[18723]
 - Guard against empty stream.datasource and namespace {pull}18769[18769]
+- Fix install service script for windows {pull}18814[18814]
 
 ==== New features
 
