--- a/x-pack/metricbeat/module/googlecloud/stackdriver/_meta/docs.asciidoc
+++ b/x-pack/metricbeat/module/googlecloud/stackdriver/_meta/docs.asciidoc
@@ -50,16 +50,16 @@ given aggregation aligner applied for each metric type.
   credentials_file_path: "your JSON credentials file path"
   exclude_labels: false
   period: 300s
-  stackdriver:
-    service: compute
-    metrics:
-      - aligner: ALIGN_MEAN
-        metric_types:
-          - "compute.googleapis.com/instance/cpu/usage_time"
-          - "compute.googleapis.com/instance/cpu/utilization"
-      - aligner: ALIGN_SUM
-        metric_types:
-          - "compute.googleapis.com/instance/uptime"
+  metrics:
+    - aligner: ALIGN_MEAN
+      service: compute
+      metric_types:
+        - "instance/cpu/usage_time"
+        - "instance/cpu/utilization"
+    - aligner: ALIGN_SUM
+      service: compute
+      metric_types:
+        - "instance/uptime"
 
 ----
 
@@ -83,14 +83,14 @@ ignored.
   credentials_file_path: "your JSON credentials file path"
   exclude_labels: false
   period: 60s
-  stackdriver:
-    service: compute
-    metrics:
-      - aligner: ALIGN_MEAN
-        metric_types:
-          - "compute.googleapis.com/instance/cpu/usage_time"
-          - "compute.googleapis.com/instance/cpu/utilization"
-      - aligner: ALIGN_SUM
-        metric_types:
-          - "compute.googleapis.com/instance/uptime"
+  metrics:
+    - aligner: ALIGN_MEAN
+      service: compute
+      metric_types:
+        - "instance/cpu/usage_time"
+        - "instance/cpu/utilization"
+    - aligner: ALIGN_SUM
+      service: compute
+      metric_types:
+        - "instance/uptime"
 ----
