[Heartbeat] Capture HTTP headers (#18327)
Provides progress toward: https://github.com/elastic/uptime/issues/190

Captures HTTP headers and stores them in the response in the same manner
as APM Server, using canonical header names in `http.response.headers`.
Values are not indexed, just stored, in ES.

--- a/heartbeat/docs/fields.asciidoc
+++ b/heartbeat/docs/fields.asciidoc
@@ -7283,6 +7283,18 @@ type: keyword
 
 --
 
+*`http.response.headers.*`*::
++
+--
+The canonical headers of the monitored HTTP response.
+
+
+type: object
+
+Object is not enabled.
+
+--
+
 [float]
 === rtt
 
