Encode API key as base64 in common code (#18945)
* Encode API key as base64 in common code

* Adding comment on API key field

* Adding CHANGELOG entries

* Adding test

* Base64-encode API key in constructor

* Move encodedAPIKey field to Connection

* Update doc on `api_key` setting value

* Adding API key format to setting section

* Compute entire API key auth header value up front

--- a/CHANGELOG-developer.next.asciidoc
+++ b/CHANGELOG-developer.next.asciidoc
@@ -45,6 +45,7 @@ The list below covers the major changes between 7.0.0-rc2 and master only.
   fully based on Go text/template and no longer uses file concatenation to generate the config.
   Your magefile.go will require a change to adapt the devtool API. See the pull request for
   more details. {pull}18148[18148]
+- The Elasticsearch client settings expect the API key to be raw (not base64-encoded). {issue}18939[18939] {pull}18945[18945]
 
 ==== Bugfixes
 
